--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -1,19 +1,22 @@
 .Contact {
   text-align: center;
-  height: 100vh;
+  min-height: 100vh;
 
   h1 {
-    margin:0 0 9rem 0;
     font-size: 5rem;
     letter-spacing: 10px;
   }
 
   .flippy-card {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
+    // border: solid 2px red;
+    margin: 0 auto;
+    height: 75vh;
+    width: 80vw;
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    margin-left: 0;
     transition-duration: 1s;
   }
 
@@ -25,11 +28,13 @@
 
   p {
     margin: 2rem;
+    padding: 1rem 2rem;
     font-size: 4rem;
   }
 
   a {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    padding: 10px;
   }
 
   a:hover {
