--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,7 +7,6 @@
   justify-content: flex-end;
   margin: 10px 20px;
 
-
   p {
     position: absolute;
     left: 0;
@@ -27,5 +26,30 @@
 
   a:hover {
     color: orange;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .Navbar {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+
+    p {
+      position: absolute;
+      left: 0;
+    }
+    a,
+    p {
+      margin: 10px;
+      font-size: 1.5rem;
+      text-decoration: none;
+      color: inherit;
+    }
+
+    span {
+      font-size: 1.5rem;
+      // margin: 10px;
+    }
   }
 }
