--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -6,14 +6,14 @@
 
   .item {
     min-height: 15rem;
-    min-width: 50rem;
-    padding: 20px;
-    margin: 30px 10px;
+    min-width: 50%;
+    padding: 2%;
+    margin: 2% 1%;
     border-radius: 2rem;
     border: solid 3px orange;
   }
 
-  .item div{
+  .item div {
     width: 100%;
     height: 100%;
     border-radius: 2rem;
@@ -56,5 +56,24 @@
     min-height: 100vh;
     background-color: white;
     color: black;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .About {
+    .item {
+      width: 100%;
+    }
+    .skills,
+    .projects {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 10px;
+    }
+    p,
+    a {
+      font-size: 2.5rem; /* anstelle von 4rem */
+      // margin-bottom: 20px;
+    }
   }
 }
