--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -3,8 +3,9 @@
   min-height: 100vh;
 
   h1 {
-    font-size: 5rem;
+    font-size: 6rem;
     letter-spacing: 10px;
+    margin: 20px 0;
   }
 
   .flippy-card {
@@ -55,5 +56,27 @@
     min-height: 100vh;
     background-color: white;
     color: black;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .Contact {
+    .flippy-card {
+      // border: solid 2px red;
+      margin: 10px;
+      min-height: 50vh;
+      min-width: 100vw;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-evenly;
+      margin-left: 0;
+      transition-duration: 1s;
+    }
+    p, a {
+      font-size: 1.5rem;
+      margin: 10px 0;
+      writing-mode: vertical-rl;
+    }
   }
 }
