--- a/src/pages/HomePage/Home.scss
+++ b/src/pages/HomePage/Home.scss
@@ -50,3 +50,44 @@
     color: black;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .Home {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+    padding: 0;
+
+    p {
+      font-size: 2.5rem;
+      margin: 10;
+      padding: 0;
+    }
+
+    span {
+      font-size: 2.5rem;
+      margin: 10;
+      color: orange;
+      font-weight: bold;
+    }
+
+    .image {
+      min-width: 100%;
+      max-height: 50vh;
+      margin: 0;
+      border: solid 2px orange;
+      border-radius: 2rem;
+    }
+
+    .text {
+      min-width: 100%;
+      min-height: 60vh;
+      margin: 0;
+    }
+
+    .licmab {
+      font-size: 3rem;
+      margin: 10px 0;
+    }
+  }
+}
